--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ body{
     color:white;
 }
 
-/* ===== Birthday Gradient Background ===== */
+/* ===== Birthday Gradiet Background ===== */
 body::before{
     content:"";
     position:fixed;
