Update birthday messages for Sabiha Noor

--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@ body::before{
 <!-- PAGE 1 -->
 <div id="p1" class="page">
     <div class="box">
-        <h2 class="glow">THIS IS FOR YOU BIJOY 🥰❤️</h2>
+        <h2 class="glow">THIS IS FOR YOU  SABIHA NOOR 🥰❤️</h2>
         <div class="btn glow" onclick="openEnvelope()">
-            CLICK DEO BIJOY BHAI 🎂👉
+            CLICK DEO SABIHA NOOR 🎂👉
         </div>
     </div>
 </div>
@@ -152,14 +152,14 @@ body::before{
 <div id="p2" class="page hidden">
     <div class="envelope" onclick="openLetter()"></div>
     <div class="box glow" style="margin-top:15px;">
-        DEAR BIJOY IT’S FOR YOU 💌
+        DEAR SABIHA NOOR’S FOR YOU 💌
     </div>
 </div>
 
 <!-- LETTER PAGE -->
 <div id="pLetter" class="page hidden">
     <div class="letter box" onclick="startCount()">
-        🎉 HAPPY BIRTHDAY BIJOY 🎉
+        🎉 HAPPY BIRTHDAY SABIHA NOOR 🎉
     </div>
 </div>
 
@@ -175,7 +175,7 @@ body::before{
     <div class="box">
         <div class="glow">Birthday Photo</div><br>
         <img src="https://d.top4top.io/p_3648aal2d6.jpeg">
-        <div id="name" class="glow">🎂 Tarek Hossen 🎂</div>
+        <div id="name" class="glow">🎂   SABIHA NOOR    🎂</div>
         <div id="typing"></div>
     </div>
 </div>
@@ -231,7 +231,23 @@ function showFinal(){
 }
 
 /* Typing Caption */
-const text="শুভ জন্মদিন 🎉 তোমার জীবন হোক আনন্দ, সফলতা আর ভালোবাসায় ভরা ❤️";
+const text="🎉✨ শুভ জন্মদিন SABIHA NOOR ✨🎉
+এই বিশেষ দিনে দোয়া করি—
+তোমার জীবন হোক আনন্দে ভরা,
+প্রতিটা সকাল শুরু হোক নতুন আশা নিয়ে,
+আর প্রতিটা রাত শেষ হোক তৃপ্তির হাসিতে।
+জীবনের পথে যত বাধাই আসুক,
+তুমি যেন সাহস আর আত্মবিশ্বাস নিয়ে এগিয়ে যেতে পারো।
+সফলতা, শান্তি আর ভালোবাসা
+চিরদিন তোমার সঙ্গী হয়ে থাকুক।
+তোমার হাসিটাই হোক তোমার সবচেয়ে বড় শক্তি,
+আর তোমার স্বপ্নগুলো একদিন বাস্তবে রূপ নিক—এই কামনাই করি।
+জীবনের প্রতিটা মুহূর্ত হোক মূল্যবান ও অর্থপূর্ণ।
+🎂💖 আবারও শুভ জন্মদিন।
+সবসময় ভালো থেকো, সুখে থেকো।
+ইতি,
+তোমার
+Net Joddha 🌸✨";
 let i=0;
 function typeText(){
     if(i<text.length){
