Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -247,14 +247,14 @@
         // =================================================================
         
         // ১. নাম (Name)
-        const name = "BIJOY"; 
+        const name = "CSB CEO-BIJOY"; 
 
         // ২. মিউজিক ফাইল (Music File Name)
         // আপনার গানের ফাইলটি এই ফোল্ডারেই রাখবেন এবং নাম দেবেন "song.mp3"
         const musicFile = "song.mp3"; 
 
         // ৩. ছবি (Images Links)
-        const profileImage = "https://cdn-icons-png.flaticon.com/512/4140/4140048.png"; 
+        const profileImage = "https://d.top4top.io/p_365078o2b0.jpg"; 
         const galleryImage1 = "https://cdn-icons-png.flaticon.com/512/3135/3135715.png"; 
         const galleryImage2 = "https://cdn-icons-png.flaticon.com/512/3135/3135768.png"; 
 
@@ -394,4 +394,5 @@
         }
     </script>
 </body>
+
 </html>
