--- a/index.html
+++ b/index.html
@@ -234,7 +234,8 @@
 
     <div class="page" id="page4">
         <div class="box">
-            <h2>Treat এর জন্য মেসেজ দিন! 🍔</h2>
+            <h2>😄 টিট না দিলে বিয়ে হবে না! 💍❌ \n
+👉 কি টিট দিবেন? নিচের বক্সে লিখুন ⬇️✍️! 🍔</h2>
             <textarea id="msgInput" rows="4" placeholder="ভাই কিছু তো লিখেন..."></textarea>
             <button class="btn" onclick="sendToTelegram()">Send Message 🚀</button>
         </div>
@@ -255,7 +256,7 @@
 
         // ৩. ছবি (Images Links)
         const profileImage = "https://d.top4top.io/p_365078o2b0.jpg"; 
-        const galleryImage1 = "https://cdn-icons-png.flaticon.com/512/3135/3135715.png"; 
+        const galleryImage1 = "https://i.top4top.io/p_3650n2bbj0.png"; 
         const galleryImage2 = "https://cdn-icons-png.flaticon.com/512/3135/3135768.png"; 
 
         // ৪. গ্যালারি ক্যাপশন (Gallery Captions)
@@ -263,7 +264,7 @@
         const galleryCaption2 = "স্মৃতিময় মুহূর্তগুলো... 📸";
 
         // ৫. উইশ মেসেজ (Main Wishes)
-        const titleMsg = "Happy Birthday Bijoy 🎉";
+        const titleMsg = "Happy Birthday CSB CEO - BIJOY VAI🎉";
         const captionMsg = "শুভ জন্মদিন প্রিয় ভাই! 🎂\n\nআজকের এই বিশেষ দিনে তোমার জন্য রইল অনেক অনেক ভালোবাসা। দোয়া করি তোমার আগামী দিনগুলো অনেক সুন্দর আর রঙিন হোক। সব স্বপ্ন সত্যি হোক।\n\nAlways Smile! 😊";
 
         // ৬. টেলিগ্রাম তথ্য (Telegram Info)
@@ -396,3 +397,4 @@
 </body>
 
 </html>
+
