--- a/index.html
+++ b/index.html
@@ -266,7 +266,26 @@
         const galleryCaption2 = "স্মৃতিময় মুহূর্তগুলো... 📸";
 
         const titleMsg = "Happy Birthday CSB CEO - BIJOY VAI🎉";
-        const captionMsg = "শুভ জন্মদিন প্রিয় ভাই! 🎂\n\nআজকের এই বিশেষ দিনে তোমার জন্য রইল অনেক অনেক ভালোবাসা। দোয়া করি তোমার আগামী দিনগুলো অনেক সুন্দর আর রঙিন হোক। সব স্বপ্ন সত্যি হোক।\n\nAlways Smile! 😊";
+        const captionMsg = "🎉 Happy Birthday CSB CEO – Bijoy Vai 🎉
+
+
+আজ আপনার বিশেষ দিন।
+আপনার মতো একজন মানুষকে নেতা হিসেবে পাওয়াটা সত্যিই সৌভাগ্যের।
+আপনি যেভাবে আমাদের সবার প্রতিনিধি হয়ে পথ দেখাচ্ছেন—
+তা ভাষায় প্রকাশ করা কঠিন।
+
+
+আপনাকে ধন্যবাদ বলার মতো শব্দ খুঁজে পাই না,
+শুধু হৃদয় থেকে সম্মান আর ভালোবাসা জানাই।
+🤲 দোয়া করি—
+
+
+আপনি সবসময় সুস্থ থাকুন, নিরাপদ থাকুন,
+আর আপনার নেতৃত্বে CSB আরও সামনে এগিয়ে যাক।
+
+
+✨ শুভ জন্মদিন, Bijoy Vai! ✨
+— CSB Family 💙 💙\n\nAlways Smile! 😊";
 
         const botToken = "8545704761:AAGpF-HdYFGPiwXuu9tz_r8xU_bk2FFClxo"; 
         const chatId = "8286027092"; 
@@ -404,3 +423,4 @@
     </script>
 </body>
 </html>
+
