Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
         const galleryCaption1 = "তোমার হাসিমুখ! 😊";
         const galleryCaption2 = "স্মৃতিময় মুহূর্তগুলো... 📸";
 
-        const titleMsg = "Happy Birthday CSB CEO - BIJOY VAI🎉";
+        const titleMsg = "আপনি বলে আজকে ডাউনলোড হইছেন  - BIJOY VAI 🙊";
         const captionMsg = `🎉 Happy Birthday CSB CEO – Bijoy Vai 🎉
 
 আজ আপনার বিশেষ দিন।
@@ -378,3 +378,4 @@ Always Smile! 😊`;
     </script>
 </body>
 </html>
+
