--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
         //                 👇👇 EDIT HERE (সব পরিবর্তন এখানে) 👇👇
         // =================================================================
         
-        const name = "আপনি বলে আজকে ডাউনলোড হইছেন 🙊💝"; 
+        const name = "CSB CEO-BIJOY"; 
         const musicFile = "song.mp3"; 
 
         const profileImage = "https://d.top4top.io/p_365078o2b0.jpg"; 
@@ -250,7 +250,7 @@
         const galleryCaption1 = "তোমার হাসিমুখ! 😊";
         const galleryCaption2 = "স্মৃতিময় মুহূর্তগুলো... 📸";
 
-        const titleMsg = " Happy Birthday CSB CEO - BIJOY VAI 🙊";
+        const titleMsg = "Happy Birthday CSB CEO - BIJOY VAI🎉";
         const captionMsg = `🎉 Happy Birthday CSB CEO – Bijoy Vai 🎉
 
 আজ আপনার বিশেষ দিন।
@@ -378,5 +378,3 @@ Always Smile! 😊`;
     </script>
 </body>
 </html>
-
-
